# sophie-bot

./: .env.example  Cargo.toml  LICENSE  README.md  config.toml  docker-compose.yml
migrations/: 1_create_table_users.sql
src/: config.rs  env.rs  framework.rs  main.rs
src/commands/: mod.rs
src/commands/administration/: commands.rs
src/commands/economy/coins/: add.rs  check.rs  mod.rs  remove.rs  reset.rs  send.rs  set.rs
src/commands/fun/: salve.rs
src/commands/fun/jankenpon/: mod.rs  utils.rs
src/commands/fun/message/: get.rs  mod.rs  set.rs
src/commands/gamble/: blackjack.rs  casino.rs  info.rs
src/commands/utils/: calc.rs  ping.rs  weather.rs
src/commands/utils/onlinefix/: mod.rs  utils.rs
src/commands/utils/user/: avatar.rs  mod.rs
src/database/: mod.rs
src/database/model/: user.rs
src/types/: blackjack.rs  data.rs  economy.rs  invocation_data.rs  jankenpon.rs  meval_context.rs  mod.rs  onlinefix.rs  torrent.rs  weather.rs
src/utils/: mod.rs  redis.rs  scraper.rs  tmdb.rs
src/utils/discord/: embed.rs  reply.rs
src/utils/discord/action_row/: buttons.rs  mod.rs  select_menu.rs
src/utils/onlinefix/: info.rs  mod.rs  search.rs  torrent.rs
