[package]
name = "sophie-bot"
version = "0.1.0"
edition = "2021"

[features]
default = []
onlinefix = []

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
poise = "0.6.1"
anyhow = "1.0.79"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
serde = "1.0.197"
serde_json = "1.0.128"
toml = "0.8.11"
rand = "0.8.5"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.20.0"
thiserror = "1.0.64"
deadpool-redis = "0.18.0"
redis = "0.27.2"
serde_bencode = "0.2.4"
sha1 = "0.10.6"
meval = "0.2"
chrono = "0.4.40"
deunicode = "1.6.1"
serde_with = "3.12.0"
percent-encoding = "2.3.1"
